--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    
+    <!-- inject:css -->
+    <!-- endinject -->
 
     <!--NPM Vendor Stylesheets-->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -270,6 +273,9 @@
     <script src="https://npmcdn.com/masonry-layout@4.0/dist/masonry.pkgd.min.js"></script>
 -->
     <script src="../src/js/script.js"></script>
+
+    <!-- inject:js -->
+    <!-- endinject -->
 </body>
 
 </html>
